// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/admin_console/AdminPanel should match snapshot 1`] = `
<div
  className="AdminPanel test-class-name"
  id="test-id"
>
  <div
    className="header"
  >
    <div>
      <h3>
        <FormattedMessage
          defaultMessage="test-title-default"
          id="test-title-id"
          values={Object {}}
        />
      </h3>
      <span>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="test-subtitle-default"
          id="test-subtitle-id"
          values={
            Object {
              "foo": "bar",
            }
          }
        />
      </span>
    </div>
  </div>
  Test
</div>
`;

exports[`components/widgets/admin_console/AdminPanel should match snapshot with button 1`] = `
<div
  className="AdminPanel test-class-name"
  id="test-id"
>
  <div
    className="header"
  >
    <div>
      <h3>
        <FormattedMessage
          defaultMessage="test-title-default"
          id="test-title-id"
          values={Object {}}
        />
      </h3>
      <span>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="test-subtitle-default"
          id="test-subtitle-id"
          values={
            Object {
              "foo": "bar",
            }
          }
        />
      </span>
    </div>
    <div
      className="button"
    >
      <span>
        TestButton
      </span>
    </div>
  </div>
  Test
</div>
`;

exports[`components/widgets/admin_console/AdminPanel should match snapshot with onHeaderClick 1`] = `
<div
  className="AdminPanel test-class-name"
  id="test-id"
>
  <div
    className="header"
    onClick={[MockFunction]}
  >
    <div>
      <h3>
        <FormattedMessage
          defaultMessage="test-title-default"
          id="test-title-id"
          values={Object {}}
        />
      </h3>
      <span>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="test-subtitle-default"
          id="test-subtitle-id"
          values={
            Object {
              "foo": "bar",
            }
          }
        />
      </span>
    </div>
  </div>
  Test
</div>
`;
